bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
#goldstandard {
	h1 {
		font-size: 100%;
		
		.publication-description {
			line-height: 1.3;
			font-size: 95%;
			display: block;
			margin-top: 0.4em;
		}
	}
	
	.tagcloud {
		text-align: center;
		.tag {
			display: inline-block;
			padding: 2px 5px 3px;
			margin: 0.8em;
			background-color: @main-color;
			font-weight: 700;
			line-height: 1;
			color: white;
			text-align: center;
			white-space: nowrap;
			vertical-align: baseline;
			border-radius: .25em;
		}
		
		.tagtiny {
			font-size: 50%;
		}
		
		.tagnormal {
			font-size: 65%
		}
		
		.taglarge {
			font-size: 80%;
		}
		
		.taghuge {
			font-size: 100%;
			padding: 8px;
		}
	}
	
	.citation-box {
		margin-bottom: 50px;
	}
	
	#related-publications {
		ul {
			padding-left: 0px;
		
			li {
				list-style: none;
			}
		}
		
		.btn-group {
			margin-bottom: 10px;
		}
	}
}

.community-info {
	margin-left: 15px;
	padding: 2px;
	
	&.warning {
		background-color: @alert-warning-bg;
	}
}

#linksresources, #related-publications-references {
	margin-top: 0.5em;
}

#linksresources {
	margin-top: 15px;
	dt, dd {
		padding-bottom: 3px;
	}
}

